fix vertical align on masonry tiles

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -64,11 +64,6 @@
         z-index:6;
     }
 
-
-    #portfolio .captionWrapper .valign{
-        padding-top:130px;
-    }
-
     .preloaderLogo{
         min-width: 100px;
         max-width: 100px;
